--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Site</title>
+    <style>
+      body{
+        background-color: white;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
